adjust readme and test parameters

--- a/movethebytes/data-transfer/rust/_compositions/quic.toml
+++ b/movethebytes/data-transfer/rust/_compositions/quic.toml
@@ -17,6 +17,5 @@
     count = 2
   [groups.run]
     [groups.run.test_params]
-      latency = "100ms"
-      bandwidth = "10MiB"
-      bslatency="100ms"
+      latency = "10"
+      bandwidth = "1073741824"
